<resources>
    <string name="app_name" translatable="false">Go4Lunch</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="google_client_id" translatable="false">649898468705-70o8d171e13d0h5r4bql8qjfs13b55ct.apps.googleusercontent.com</string>
    <string name="google_btn" translatable="false">Google</string>
    <string name="github_btn" translatable="false">GitHub</string>
    <string name="google_image_url" translatable="false">"https://maps.googleapis.com/maps/api/place/photo?maxwidth=400&amp;photo_reference=%1$s&amp;key=%2$s"</string>


    <!-- TODO: translatable resources -->
    <string name="search">Search</string>
    <string name="list_view_bottom_nav">List View</string>
    <string name="map_bottom_nav">Map</string>
    <string name="workmates_bottom_nav">Workmates</string>
    <string name="list_avatar_workmate_a11y">Picture of %s</string>
    <string name="list_workmate_send_message_a11y">Send message</string>
    <string name="detail_button_call">call</string>
    <string name="detail_button_like" translatable="false">like</string>
    <string name="detail_button_website">website</string>
    <string name="detail_vegan_friendly_a11y">Vegan friendly</string>
    <string name="restaurant_item_food_image_a11y">Food image</string>
    <string name="detail_restaurant_chose_fab">Go?</string>
    <string name="detail_restaurant_chosen_fab">Go!</string>
    <string name="detail_restaurant_unchosen_fab">Go?</string>
    <string name="list_workmate_name_joining">%s is joining!</string>
    <string name="list_workmate_name_and_attenting_restaurant">%1$s is eating at %2$s</string>
    <string name="list_error_message_generic">Something went wrong with your request!\nTry later :)</string>
    <string name="list_error_message_permission">Something went wrong!\nPlease activate your Gps :)</string>
    <string name="detail_food_picture_a11y">Food picture</string>
    <string name="nav_drawer_lunch">Your lunch</string>
    <string name="nav_drawer_settings">Settings</string>
    <string name="nav_drawer_gps_permission">Manage Gps permission</string>
    <string name="nav_drawer_logout">Logout</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="detail_missing_information">Missing information</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="onboarding_privacy_message">Don\'t worry, we value your privacy \nand won\'t share your data!</string>
    <string name="onboarding_decline_button">No, thank you</string>
    <string name="onboarding_allow_button">Grant permission</string>
    <string name="onboarding_welcome_tv">Welcome!\nFor a better experience, \nGo4Lunch needs your Gps location</string>
    <string name="show_rationale_permission_message">This app works with your permission to GPS location. We only need it to provide you restaurants in your area! If you want to grant this permission, please click on \'Change settings\'.</string>
    <string name="change_settings_dialog_button">change settings</string>
    <string name="list_error_message_no_results">Oops, no results found in your area!</string>
    <string name="list_error_message_no_gps">Please activate you Gps\nto view the list</string>
    <string name="list_restaurant_opening_text_open">Open</string>
    <string name="list_restaurant_opening_text_closed">Closed</string>
    <string name="list_restaurant_opening_text_undefined" translatable="false"> </string>
    <string name="map_user_maker_message">Hello, there</string>
    <string name="map_toast_message_error_gps">Please enable your GPS to continue!</string>
    <string name="error_placeholder">error</string>
    <string name="detail_workmate_joining">%s is joining!</string>
    <string name="list_workmate_not_attending">%s has not chosen yet</string>
    <string name="no_workmate_text">No workmate is going to eat\n at this restaurant so far!</string>
    <string name="toast_message_user_no_restaurant_chosen">You did not chose where to lunch yet!</string>
    <string name="notification_content_title">Time to Go4Lunch!</string>
    <string name="notification_content_start">You</string>
    <string name="notification_content_and">" and "</string>
    <string name="notification_content_last_and">", and "</string>
    <string name="notification_content_going_to_eat_at">" are going to eat at "</string>
    <string name="notification_content_located_at">" located at "</string>
    <string name="notification_content_solo_user">"You are going to eat at "</string>
    <string name="settings_activity_title">Settings</string>
    <string name="lunch_reminder_notifications">Lunch reminder notifications</string>
    <string name="settings_activity_gps_button">GPS settings</string>
    <string name="chat_sender_name">You</string>
    <string name="chat_send_message_btn_a11y">Send message</string>
    <string name="chat_bottom_nav" translatable="false">Chat</string>
    <string name="chat_textinput_et_hint">Type your message…</string>
    <string name="chat_user_avatar_a11y">user avatar</string>
    <string name="show_rationale_title">Permission required</string>
    <string name="toast_no_restaurant_match_found">No restaurant match found nearby</string>
    <string name="list_no_restaurant_match">No restaurant match found nearby</string>
    <string name="toast_no_restaurant_found_nearby">No restaurant found in your area</string>
    <string name="distance_meter">m</string>

</resources>