<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_bar_map"
        android:title="@string/map_bottom_nav"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_map_24" />

    <item
        android:id="@+id/bottom_bar_restaurant_list"
        android:title="@string/list_view_bottom_nav"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_format_list_bulleted_24" />

    <item
        android:id="@+id/bottom_bar_workmate_list"
        android:title="@string/workmates_bottom_nav"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_people_24" />

    <item
        android:id="@+id/bottom_bar_chat_list"
        android:title="@string/chat_bottom_nav"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_message_24" />
</menu>