<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_your_lunch"
        android:icon="@drawable/baseline_restaurant_24"
        android:orderInCategory="1"
        android:title="@string/nav_drawer_lunch" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/baseline_settings_24"
        android:orderInCategory="2"
        android:title="@string/nav_drawer_settings" />

    <item
        android:id="@+id/nav_gps_permission"
        android:icon="@drawable/baseline_gps_fixed_24"
        android:orderInCategory="3"
        android:title="@string/nav_drawer_gps_permission" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/baseline_logout_24"
        android:orderInCategory="4"
        android:title="@string/nav_drawer_logout" />
</menu>