<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.emplk.go4lunch.ui.restaurant_detail.RestaurantDetailActivity">

    <ImageView
        android:id="@+id/detail_restaurant_picture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/fries_horizontal_tools" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_restaurant_orange_middle_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pumpkin_orange"
        android:minHeight="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_restaurant_picture">

        <TextView
            android:id="@+id/detail_restaurant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/dirty_white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Five Guys" />

        <RatingBar
            android:id="@+id/detail_restaurant_rating_bar"
            style="@style/Theme.Go4Lunch.RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@id/detail_restaurant_name"

            app:layout_constraintStart_toEndOf="@id/detail_restaurant_name"
            app:layout_constraintTop_toTopOf="@id/detail_restaurant_name"
            tools:rating="2" />

        <TextView
            android:id="@+id/detail_restaurant_cuisine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/detail_restaurant_name"
            app:layout_constraintTop_toBottomOf="@id/detail_restaurant_name"
            tools:text="American" />

        <TextView
            android:id="@+id/detail_restaurant_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/detail_restaurant_cuisine"
            app:layout_constraintStart_toEndOf="@id/detail_restaurant_cuisine"
            app:layout_constraintTop_toTopOf="@id/detail_restaurant_cuisine"
            tools:text="2 rue de la concorde" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.divider.MaterialDivider
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_restaurant_orange_middle_bar_layout"
        app:layout_constraintBottom_toTopOf="@id/detail_restaurant_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/dirty_white"
        android:id="@+id/detail_restaurant_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_restaurant_orange_middle_bar_layout">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/detail_restaurant_call_button"
            style="@style/Theme.Go4Lunch.DetailRestaurantButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_button_call"
            app:icon="@drawable/baseline_local_phone_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/detail_restaurant_like_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/detail_restaurant_like_button"
            style="@style/Theme.Go4Lunch.DetailRestaurantButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_button_like"
            app:icon="@drawable/baseline_star_border_24"
            app:iconTint="@color/light_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/detail_restaurant_website_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/detail_restaurant_call_button"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/detail_restaurant_website_button"
            style="@style/Theme.Go4Lunch.DetailRestaurantButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_button_website"
            app:icon="@drawable/baseline_internet_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/detail_restaurant_like_button"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.divider.MaterialDivider
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_restaurant_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/detail_restaurant_workmates_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_restaurant_buttons"
        tools:listitem="@layout/workmates_item" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/dirty_white"
        android:text="Go?"
        android:textColor="@color/licorice_gray"
        app:icon="@drawable/baseline_restaurant_24"
        app:iconTint="@color/crimson_rust"
        app:layout_constraintBottom_toTopOf="@id/detail_restaurant_orange_middle_bar_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_restaurant_picture" />

</androidx.constraintlayout.widget.ConstraintLayout>
